--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "snap",
-  "version": "0.1.0",
-  "description": "The 'Hello, world!' of MetaMask Snaps, now written in TypeScript.",
+  "name": "farcaster-insights",
+  "version": "1.0.0",
+  "description": "MetaMask Snap transaction insights with Farcaster data.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/template-snap-monorepo.git"
+    "url": "git+https://github.com/Montoya/farcaster-insights.git"
   },
   "license": "(MIT-0 OR Apache-2.0)",
   "main": "./dist/bundle.js",
   "files": [
     "dist/",
+    "images/",
     "snap.manifest.json"
   ],
   "scripts": {
